--- a/ASPNETCORERoleManagement/Views/Objetivos/Delete.cshtml
+++ b/ASPNETCORERoleManagement/Views/Objetivos/Delete.cshtml
@@ -3,10 +3,24 @@
 @{
     ViewData["Title"] = "Delete";
 }
+<ul class="nav nav-tabs">
+
+    <li role="presentation">
+        @*asp-route-TipoObjId:Forza el parametro para hacer la busqueda por Tipo de Objetivo*@
+        <a asp-controller="TipoObjs"
+           asp-action="Details"
+           asp-route-id="@ViewBag.TipoObjID">
+            Detalles
+        </a>
+
+    </li>
+    <li role="presentation" class="active"><a href="#">Objetivos</a></li>
+    <li role="presentation"><a href="#">Messages</a></li>
+</ul>
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+
 <div>
     <h4>Objetivo</h4>
     <hr />
@@ -33,13 +47,19 @@
             @Html.DisplayNameFor(model => model.TipoObj)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.TipoObj.TipoObjId)
+            @Html.DisplayFor(model => model.TipoObjId )
+
         </dd>
     </dl>
-    
+    <h3>Confirme ¿Está seguro de eliminar?</h3>
     <form asp-action="Delete">
-        <input type="hidden" asp-for="IdObjetivo" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <nav class="navbar navbar-light bg-light">
+
+            <input type="hidden" asp-for="IdObjetivo" />
+            <input type="submit" value="Confirmar" class="btn btn-default" /> |
+            <a asp-action="Index" asp-route-TipoObjId="@ViewBag.TipoObjId" class="btn btn-default">cancelar</a>
+        </nav>
+
+
     </form>
 </div>
