--- a/ASPNETCORERoleManagement/Views/Objetivos/Edit.cshtml
+++ b/ASPNETCORERoleManagement/Views/Objetivos/Edit.cshtml
@@ -3,16 +3,35 @@
 @{
     ViewData["Title"] = "Edit";
 }
+<ul class="nav nav-tabs">
 
-<h2>Edit</h2>
+    <li role="presentation">
+        @*asp-route-TipoObjId:Forza el parametro para hacer la busqueda por Tipo de Objetivo*@
+        <a asp-controller="TipoObjs"
+           asp-action="Details"
+           asp-route-id="@ViewBag.TipoObjID">
+            Detalles
+        </a>
 
+    </li>
+    <li role="presentation" class="active"><a href="#">Objetivos</a></li>
+    <li role="presentation"><a href="#">Messages</a></li>
+</ul>
+
+<h2>Editar</h2>
 <h4>Objetivo</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="IdObjetivo" />
+            
+            <div class="form-group">
+                <label asp-for="IdObjetivo" class="control-label"></label>
+                <input asp-for="IdObjetivo" class="form-control" readonly="readonly"  />
+                <span asp-validation-for="IdObjetivo" class="text-danger"></span>
+            </div>
+
             <div class="form-group">
                 <label asp-for="Descripcion" class="control-label"></label>
                 <input asp-for="Descripcion" class="form-control" />
@@ -30,19 +49,23 @@
             </div>
             <div class="form-group">
                 <label asp-for="TipoObjId" class="control-label"></label>
-                <select asp-for="TipoObjId" class="form-control" asp-items="ViewBag.TipoObjId"></select>
+
+                <input asp-for="TipoObjId" class="form-control" value="@ViewBag.TipoObjId" readonly="readonly" />
                 <span asp-validation-for="TipoObjId" class="text-danger"></span>
             </div>
+
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <nav class="navbar navbar-light bg-light">
+                    <input type="submit" value="Guardar" class="btn btn-success" />
+                    <a asp-action="Index" asp-route-TipoObjId="@ViewBag.TipoObjId" class="btn btn-default">cancelar</a>
+                </nav>
+
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
