--- a/ASPNETCORERoleManagement/Views/Objetivos/Index.cshtml
+++ b/ASPNETCORERoleManagement/Views/Objetivos/Index.cshtml
@@ -69,9 +69,9 @@
                     @Html.DisplayFor(modelItem => item.TipoObj.TipoObjId)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.IdObjetivo">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.IdObjetivo">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.IdObjetivo">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.IdObjetivo">Editar</a> |
+                    <a asp-action="Details" asp-route-id="@item.IdObjetivo">Detalles</a> |
+                    <a asp-action="Delete" asp-route-id="@item.IdObjetivo">Eliminar</a>
                 </td>
             </tr>
         }
