--- a/ASPNETCORERoleManagement/Views/TipoObjs/Details.cshtml
+++ b/ASPNETCORERoleManagement/Views/TipoObjs/Details.cshtml
@@ -5,7 +5,7 @@
 }
 
 <ul class="nav nav-tabs">
-    <li role="presentation" class="active"><a href="#">Detalles</a></li>
+    <li role="presentation" class="active"><a href="#">Tipo Objetivos</a></li>
     <li role="presentation">
         @*asp-route-TipoObjId:Forza el parametro para hacer la busqueda por Tipo de Objetivo*@
         <a asp-controller="Objetivos"
