--- a/ASPNETCORERoleManagement/Views/Objetivos/Details.cshtml
+++ b/ASPNETCORERoleManagement/Views/Objetivos/Details.cshtml
@@ -10,7 +10,7 @@
         <a asp-controller="TipoObjs"
            asp-action="Details"
            asp-route-id="@ViewBag.TipoObjID">
-            Detalles
+            Tipo Objetivos
         </a>
 
     </li>
@@ -43,15 +43,19 @@
             @Html.DisplayFor(model => model.Fin)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.TipoObj)
+            @*@Html.DisplayNameFor(model => model.TipoObj)*@
+            Tipo de Objetivo
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.TipoObj.TipoObjId)
+            @Html.DisplayFor(model => model.TipoObj.Descripcion )
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.IdObjetivo">Editar</a> |
-    <a asp-action="Delete" asp-route-id="@Model.IdObjetivo">Eliminar</a> |
-    <a asp-action="Index" asp-route-TipoObjId="@Model.TipoObj.TipoObjId" class="btn btn-default">cancelar</a>
+    <ul class="nav nav-pills">
+        <a asp-action="Edit" asp-route-id="@Model.IdObjetivo" class="btn btn-success ">Editar</a> |
+        <a asp-action="Delete" asp-route-id="@Model.IdObjetivo" class="btn btn-danger">Eliminar</a> |
+        <a asp-action="Index" asp-route-TipoObjId="@Model.TipoObj.TipoObjId" class="btn btn-default">cancelar</a>
+    </ul>
+    
 </div>
