--- a/ASPNETCORERoleManagement/Views/Objetivos/Edit.cshtml
+++ b/ASPNETCORERoleManagement/Views/Objetivos/Edit.cshtml
@@ -10,7 +10,7 @@
         <a asp-controller="TipoObjs"
            asp-action="Details"
            asp-route-id="@ViewBag.TipoObjID">
-            Detalles
+            Tipo Objetivos
         </a>
 
     </li>
