--- a/ASPNETCORERoleManagement/Views/Objetivos/Index.cshtml
+++ b/ASPNETCORERoleManagement/Views/Objetivos/Index.cshtml
@@ -12,7 +12,7 @@
            asp-action="Details"
            asp-route-id="@ViewBag.TipoObjID" 
            >
-            Detalles
+            Tipo Objetivos
         </a>
 
     </li>
@@ -24,7 +24,7 @@
 <h2>Objetivos</h2>
 
 <p>
-    <a asp-action="Create" asp-route-id="@ViewBag.TipoObjId" >Create New</a>
+    <a asp-action="Create" asp-route-id="@ViewBag.TipoObjId" >Nuevo</a>
 </p>
 <table class="table">
     <thead>
@@ -42,7 +42,7 @@
                 @Html.DisplayNameFor(model => model.Fin)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.TipoObj)
+                @Html.DisplayNameFor(model => model.TipoObj.TipoObjId  )
             </th>
             <th></th>
         </tr>
@@ -66,11 +66,12 @@
                     @Html.DisplayFor(modelItem => item.Fin)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.TipoObj.TipoObjId)
+                    
+                    @Html.DisplayFor(modelItem => item.TipoObj.Descripcion )
                 </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.IdObjetivo">Editar</a> |
-                    <a asp-action="Details" asp-route-id="@item.IdObjetivo">Detalles</a> |
+                    <a asp-action="Details" asp-route-id="@item.IdObjetivo">Visualizar</a> |
                     <a asp-action="Delete" asp-route-id="@item.IdObjetivo">Eliminar</a>
                 </td>
             </tr>
