--- a/ASPNETCORERoleManagement/Views/TipoObjs/Index.cshtml
+++ b/ASPNETCORERoleManagement/Views/TipoObjs/Index.cshtml
@@ -47,7 +47,7 @@
                 </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.TipoObjId">Editar</a> |
-                    <a asp-action="Details" asp-route-id="@item.TipoObjId">Detalles</a> |
+                    <a asp-action="Details" asp-route-id="@item.TipoObjId">Visualizar</a> |
                     <a asp-action="Delete" asp-route-id="@item.TipoObjId">Eliminar</a>
                 </td>
             </tr>
