--- a/ASPNETCORERoleManagement/Views/Tareas/Delete.cshtml
+++ b/ASPNETCORERoleManagement/Views/Tareas/Delete.cshtml
@@ -1,15 +1,14 @@
 ﻿@model ASPNETCORERoleManagement.Models.Tareas
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Eliminar Tarea";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Tareas</h4>
-    <hr />
+<div class="panel panel-default">
+    <div class="panel-heading">
+        
+        <h4>Eliminar Tareas</h4>
+    </div>
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.TareasDesc)
@@ -42,10 +41,14 @@
             @Html.DisplayFor(model => model.Objetivo.IdObjetivo)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
+        <h3>Confirme ¿Desea eliminar la tarea?</h3>
         <input type="hidden" asp-for="TareaId" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Confirmar" class="btn btn-danger " /> |
+        <a asp-action="Index" class="btn btn-default">Volver a la lista.</a>
     </form>
-</div>
+</div> 
+    
+
+    
