--- a/ASPNETCORERoleManagement/Views/Tareas/Edit.cshtml
+++ b/ASPNETCORERoleManagement/Views/Tareas/Edit.cshtml
@@ -1,54 +1,58 @@
 ﻿@model ASPNETCORERoleManagement.Models.Tareas
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
 }
 
-<h2>Edit</h2>
+<div class="panel panel-default">
+    <div class="panel-heading">
 
-<h4>Tareas</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="TareaId" />
-            <div class="form-group">
-                <label asp-for="IdObjetivo" class="control-label"></label>
-                <select asp-for="IdObjetivo" class="form-control" asp-items="ViewBag.IdObjetivo"></select>
-                <span asp-validation-for="IdObjetivo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="TareasDesc" class="control-label"></label>
-                <input asp-for="TareasDesc" class="form-control" />
-                <span asp-validation-for="TareasDesc" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="TareasFechaRegistro" class="control-label"></label>
-                <input asp-for="TareasFechaRegistro" class="form-control" />
-                <span asp-validation-for="TareasFechaRegistro" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="TareasFechaFinDeseado" class="control-label"></label>
-                <input asp-for="TareasFechaFinDeseado" class="form-control" />
-                <span asp-validation-for="TareasFechaFinDeseado" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="TareasFechaFinReal" class="control-label"></label>
-                <input asp-for="TareasFechaFinReal" class="form-control" />
-                <span asp-validation-for="TareasFechaFinReal" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </form>
+        <h4>Editar Tareas</h4>
     </div>
-</div>
+    <div class="panel-body">
+        <div class="row">
+            <div class=".col-xs-12 .col-sm-6 .col-md-8">
+                <form asp-action="Edit">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <input type="hidden" asp-for="TareaId" />
+                    <div class="form-group">
+                        <label asp-for="IdObjetivo" class="control-label"></label>
+                        <select asp-for="IdObjetivo" class="form-control" asp-items="ViewBag.IdObjetivo"></select>
+                        <span asp-validation-for="IdObjetivo" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="TareasDesc" class="control-label"></label>
+                        <input asp-for="TareasDesc" class="form-control" />
+                        <span asp-validation-for="TareasDesc" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="TareasFechaRegistro" class="control-label"></label>
+                        <input asp-for="TareasFechaRegistro" class="form-control" />
+                        <span asp-validation-for="TareasFechaRegistro" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="TareasFechaFinDeseado" class="control-label"></label>
+                        <input asp-for="TareasFechaFinDeseado" class="form-control" />
+                        <span asp-validation-for="TareasFechaFinDeseado" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="TareasFechaFinReal" class="control-label"></label>
+                        <input asp-for="TareasFechaFinReal" class="form-control" />
+                        <span asp-validation-for="TareasFechaFinReal" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Save" class="btn btn-default" />
+                    </div>
+                </form>
+            </div>
+        </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+        <div>
+            <a asp-action="Index">Back to List</a>
+        </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    </div>
+</div> 
+    @section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }
