--- a/ASPNETCORERoleManagement/Views/Tareas/Edit.cshtml
+++ b/ASPNETCORERoleManagement/Views/Tareas/Edit.cshtml
@@ -40,17 +40,15 @@
                         <input asp-for="TareasFechaFinReal" class="form-control" />
                         <span asp-validation-for="TareasFechaFinReal" class="text-danger"></span>
                     </div>
+                    
                     <div class="form-group">
-                        <input type="submit" value="Save" class="btn btn-default" />
+
+                        <input type="submit" value="Guardar" class="btn btn-success" />
+                        <a asp-action="Index" class="btn btn-default">Volver la lista</a>
                     </div>
-                </form>
+</form>
             </div>
         </div>
-
-        <div>
-            <a asp-action="Index">Back to List</a>
-        </div>
-
     </div>
 </div> 
     @section Scripts {
